Security & Performance Hardening: AES-GCM upgrade, RBAC enforcement, Caffeine caching, and session auto-login prevention